add authentication functionally

--- a/client/android_ios/android/app/build.gradle
+++ b/client/android_ios/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -69,6 +70,8 @@ flutter {
 }
 
 dependencies {
-    implementation "androidx.multidex:multidex:2.0.1"                      
+    implementation "androidx.multidex:multidex:2.0.1" 
+    implementation platform('com.google.firebase:firebase-bom:32.1.1')   
+    implementation 'com.google.firebase:firebase-analytics-ktx'                 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
