--- a/client/android_ios/pubspec.yaml
+++ b/client/android_ios/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   # HTTP & Media Services
+  uuid: ^3.0.7
   http: ^0.13.0
   image_picker: ^0.8.9
   video_player: ^2.6.1
@@ -22,7 +23,6 @@ dependencies:
   flutter_bloc: ^8.1.3
   hydrated_bloc: ^9.1.1
   path_provider: ^2.0.15
-  device_info_plus: ^9.0.2
   permission_handler: ^10.3.0
 
   android_info:
@@ -45,3 +45,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
