--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -8,7 +8,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
+  bloc: ^8.1.2  
+  go_router: ^8.0.5
   equatable: ^2.0.5
   collection: ^1.17.1
   uuid: ^3.0.7
