--- a/client/android_ios/pubspec.yaml
+++ b/client/android_ios/pubspec.yaml
@@ -13,14 +13,11 @@ dependencies:
   # HTTP & Media Services
   uuid: ^3.0.7
   http: ^0.13.0
-  image_picker: ^0.8.9
-  video_player: ^2.6.1
 
   # Necessary Packages
   meta: ^1.9.1
   go_router: ^8.0.5
   equatable: ^2.0.5
-  bloc_test: ^9.1.3
   flutter_bloc: ^8.1.3
   hydrated_bloc: ^9.1.1
   path_provider: ^2.0.15
@@ -28,6 +25,9 @@ dependencies:
 
   android_info:
     git: https://github.com/rahulsharmadev-community/android_info.git
+  logs:
+    git: https://github.com/rahulsharmadev-community/logs.git
+
 
   # Google Firebase Services
   firebase_core: ^2.14.0
