--- a/client/android_ios/pubspec.yaml
+++ b/client/android_ios/pubspec.yaml
@@ -1,5 +1,14 @@
 name: reConnect
-description: Get ready to reConnect like never before with reConnect! This friendly chat app, built with Flutter, is here to bring people together. Available on web, mobile, and Windows, reConnect ensures a smooth and consistent experience across all devices. Stay connected with loved ones, catch up with friends, and make new connections effortlessly. With its user-friendly interface and powerful features, reConnect makes chatting a breeze. Share moments, engage in meaningful conversations, and enjoy group discussions with ease. Download reConnect today and experience the joy of connecting in a fun and friendly way!
+description: Get ready to reConnect like never before with reConnect! This
+  friendly chat app, built with Flutter, is here to bring people together.
+  Available on web, mobile, and Windows, reConnect ensures a smooth and
+  consistent experience across all devices. Stay connected with loved ones,
+  catch up with friends, and make new connections effortlessly. With its
+  user-friendly interface and powerful features, reConnect makes chatting a
+  breeze. Share moments, engage in meaningful conversations, and enjoy group
+  discussions with ease. Download reConnect today and experience the joy of
+  connecting in a fun and friendly way!
+
 publish_to: "none"
 version: 1.0.0+1
 
@@ -9,40 +18,36 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # HTTP & Media Services
-  uuid: ^3.0.7
-  http: ^0.13.0
-
-  # Necessary Packages
-  meta: ^1.9.1
-  go_router: ^8.0.5
-  equatable: ^2.0.5
-  flutter_bloc: ^8.1.3
-  hydrated_bloc: ^9.1.1
-  path_provider: ^2.0.15
-  permission_handler: ^10.3.0
-
-  android_info:
-    git: https://github.com/rahulsharmadev-community/android_info.git
   logs:
     git: https://github.com/rahulsharmadev-community/logs.git
+  android_info:
+    git: https://github.com/rahulsharmadev-community/android_info.git
+  cached_image:
+    git: https://github.com/rahulsharmadev-community/cached_image.git
 
-
-  # Google Firebase Services
+  dio: ^5.3.0
+  equatable: ^2.0.5
   firebase_core: ^2.14.0
-  cloud_firestore: ^4.8.1
-  firebase_storage: ^11.2.3
-  firebase_messaging: ^14.6.3
   firebase_database: ^10.2.3
+  cloud_firestore: ^4.8.1
+  firebase_messaging: ^14.6.3
+  flutter_bloc: ^8.1.3
+  flutter_svg: ^2.0.7
+  go_router: ^8.0.5
+  hydrated_bloc: ^9.1.1
 
+  meta: ^1.9.1
+  uuid: ^3.0.7
+  crypto: ^3.0.3
+  path_provider: ^2.0.15
+  permission_handler: ^10.3.0
   shared:
     path: ../../shared/
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
   lints: ^2.1.1
 
 flutter:
