--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -8,22 +8,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-  bloc: ^8.1.2  
+
+  uuid: ^3.0.7
+  crypto: ^3.0.3
+  meta: ^1.9.1
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  hydrated_bloc: ^9.1.1
+  flutter_svg: ^2.0.7
   go_router: ^8.0.5
   equatable: ^2.0.5
   collection: ^1.17.1
-  uuid: ^3.0.7
-  meta: ^1.9.1
 
   logs:
     git: https://github.com/rahulsharmadev-community/logs.git
 
-
   # Google Firebase Services
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.1
-  firebase_storage: ^11.2.3
   firebase_database: ^10.2.3
   firebase_messaging: ^14.6.3
 
@@ -31,5 +33,3 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-    
