--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   go_router: ^8.0.5
   equatable: ^2.0.5
   collection: ^1.17.1
+  image_size_getter: ^2.1.2
 
   logs:
     git: https://github.com/rahulsharmadev-community/logs.git
