--- a/client/android_ios/pubspec.yaml
+++ b/client/android_ios/pubspec.yaml
@@ -24,23 +24,31 @@ dependencies:
     git: https://github.com/rahulsharmadev-community/android_info.git
   cached_image:
     git: https://github.com/rahulsharmadev-community/cached_image.git
+    # ref: 
 
   dio: ^5.3.0
+  bloc: ^8.1.2
+  
   equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  hydrated_bloc: ^9.1.1
   firebase_core: ^2.14.0
   firebase_database: ^10.2.3
   cloud_firestore: ^4.8.1
   firebase_messaging: ^14.6.3
-  flutter_bloc: ^8.1.3
+  image_size_getter: ^2.1.2
+  flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.0.7
+  file_picker: ^5.3.3
+  camera: ^0.10.5+2
   go_router: ^8.0.5
-  hydrated_bloc: ^9.1.1
+
 
   meta: ^1.9.1
   uuid: ^3.0.7
   crypto: ^3.0.3
   path_provider: ^2.0.15
-  permission_handler: ^10.3.0
+  permission_handler: ^10.4.3
   shared:
     path: ../../shared/
 
@@ -55,3 +63,4 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/svgs/
