--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   equatable: ^2.0.5
   collection: ^1.17.1
   image_size_getter: ^2.1.2
-
   http: ^1.1.0
+  rxdart: ^0.27.7
   # Google Firebase Services
   googleapis_auth: ^1.4.1
   firebase_core: ^2.15.0
