--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
       url: https://github.com/rahulsharmadev-community/cached_image.git
       ref: v0.0.1
 
+  jars:
+    git: 
+      url: https://github.com/rahulsharmadev-community/jars.git
+      ref: v0.0.6
+
   dio: ^5.3.0
   bloc: ^8.1.2
   
