--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
     git:
       url: https://github.com/rahulsharmadev-community/logs.git
       ref: v0.0.1
+      
+  jars:
+    git: 
+      url: https://github.com/rahulsharmadev-community/jars.git
+      ref: v0.0.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
